// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WalletStatusIndicator /> should render correctly when wallet is connected hardware 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WalletStatusIndicator
    active={true}
    walletType="hardware"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "active": true,
      "children": <Tooltip
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="right"
        prefixCls="ant-tooltip"
        title="Connected"
        transitionName="zoom-big-fast"
>
        <style__Icon
                src="IMAGE_MOCK"
                walletType="hardware"
        />
</Tooltip>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "arrowPointAtCenter": false,
        "autoAdjustOverflow": true,
        "children": <style__Icon
          src="IMAGE_MOCK"
          walletType="hardware"
/>,
        "mouseEnterDelay": 0.1,
        "mouseLeaveDelay": 0.1,
        "placement": "right",
        "prefixCls": "ant-tooltip",
        "title": "Connected",
        "transitionName": "zoom-big-fast",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "src": "IMAGE_MOCK",
          "walletType": "hardware",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "active": true,
        "children": <Tooltip
          arrowPointAtCenter={false}
          autoAdjustOverflow={true}
          mouseEnterDelay={0.1}
          mouseLeaveDelay={0.1}
          placement="right"
          prefixCls="ant-tooltip"
          title="Connected"
          transitionName="zoom-big-fast"
>
          <style__Icon
                    src="IMAGE_MOCK"
                    walletType="hardware"
          />
</Tooltip>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "arrowPointAtCenter": false,
          "autoAdjustOverflow": true,
          "children": <style__Icon
            src="IMAGE_MOCK"
            walletType="hardware"
/>,
          "mouseEnterDelay": 0.1,
          "mouseLeaveDelay": 0.1,
          "placement": "right",
          "prefixCls": "ant-tooltip",
          "title": "Connected",
          "transitionName": "zoom-big-fast",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "src": "IMAGE_MOCK",
            "walletType": "hardware",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<WalletStatusIndicator /> should render correctly when wallet is decrypted software 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WalletStatusIndicator
    active={true}
    walletType="software"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "active": true,
      "children": <Tooltip
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="right"
        prefixCls="ant-tooltip"
        title="Unlocked"
        transitionName="zoom-big-fast"
>
        <style__Icon
                src="IMAGE_MOCK"
                walletType="software"
        />
</Tooltip>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "arrowPointAtCenter": false,
        "autoAdjustOverflow": true,
        "children": <style__Icon
          src="IMAGE_MOCK"
          walletType="software"
/>,
        "mouseEnterDelay": 0.1,
        "mouseLeaveDelay": 0.1,
        "placement": "right",
        "prefixCls": "ant-tooltip",
        "title": "Unlocked",
        "transitionName": "zoom-big-fast",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "src": "IMAGE_MOCK",
          "walletType": "software",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "active": true,
        "children": <Tooltip
          arrowPointAtCenter={false}
          autoAdjustOverflow={true}
          mouseEnterDelay={0.1}
          mouseLeaveDelay={0.1}
          placement="right"
          prefixCls="ant-tooltip"
          title="Unlocked"
          transitionName="zoom-big-fast"
>
          <style__Icon
                    src="IMAGE_MOCK"
                    walletType="software"
          />
</Tooltip>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "arrowPointAtCenter": false,
          "autoAdjustOverflow": true,
          "children": <style__Icon
            src="IMAGE_MOCK"
            walletType="software"
/>,
          "mouseEnterDelay": 0.1,
          "mouseLeaveDelay": 0.1,
          "placement": "right",
          "prefixCls": "ant-tooltip",
          "title": "Unlocked",
          "transitionName": "zoom-big-fast",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "src": "IMAGE_MOCK",
            "walletType": "software",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<WalletStatusIndicator /> should render correctly when wallet is disconnected hardware 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WalletStatusIndicator
    active={false}
    walletType="hardware"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "active": false,
      "children": <Tooltip
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="right"
        prefixCls="ant-tooltip"
        title="Disconnected"
        transitionName="zoom-big-fast"
>
        <style__Icon
                src="IMAGE_MOCK"
                walletType="hardware"
        />
</Tooltip>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "arrowPointAtCenter": false,
        "autoAdjustOverflow": true,
        "children": <style__Icon
          src="IMAGE_MOCK"
          walletType="hardware"
/>,
        "mouseEnterDelay": 0.1,
        "mouseLeaveDelay": 0.1,
        "placement": "right",
        "prefixCls": "ant-tooltip",
        "title": "Disconnected",
        "transitionName": "zoom-big-fast",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "src": "IMAGE_MOCK",
          "walletType": "hardware",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "active": false,
        "children": <Tooltip
          arrowPointAtCenter={false}
          autoAdjustOverflow={true}
          mouseEnterDelay={0.1}
          mouseLeaveDelay={0.1}
          placement="right"
          prefixCls="ant-tooltip"
          title="Disconnected"
          transitionName="zoom-big-fast"
>
          <style__Icon
                    src="IMAGE_MOCK"
                    walletType="hardware"
          />
</Tooltip>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "arrowPointAtCenter": false,
          "autoAdjustOverflow": true,
          "children": <style__Icon
            src="IMAGE_MOCK"
            walletType="hardware"
/>,
          "mouseEnterDelay": 0.1,
          "mouseLeaveDelay": 0.1,
          "placement": "right",
          "prefixCls": "ant-tooltip",
          "title": "Disconnected",
          "transitionName": "zoom-big-fast",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "src": "IMAGE_MOCK",
            "walletType": "hardware",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<WalletStatusIndicator /> should render correctly when wallet is encrypted software 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WalletStatusIndicator
    active={false}
    walletType="software"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "active": false,
      "children": <Tooltip
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="right"
        prefixCls="ant-tooltip"
        title="Locked"
        transitionName="zoom-big-fast"
>
        <style__Icon
                src="IMAGE_MOCK"
                walletType="software"
        />
</Tooltip>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "arrowPointAtCenter": false,
        "autoAdjustOverflow": true,
        "children": <style__Icon
          src="IMAGE_MOCK"
          walletType="software"
/>,
        "mouseEnterDelay": 0.1,
        "mouseLeaveDelay": 0.1,
        "placement": "right",
        "prefixCls": "ant-tooltip",
        "title": "Locked",
        "transitionName": "zoom-big-fast",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "src": "IMAGE_MOCK",
          "walletType": "software",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "active": false,
        "children": <Tooltip
          arrowPointAtCenter={false}
          autoAdjustOverflow={true}
          mouseEnterDelay={0.1}
          mouseLeaveDelay={0.1}
          placement="right"
          prefixCls="ant-tooltip"
          title="Locked"
          transitionName="zoom-big-fast"
>
          <style__Icon
                    src="IMAGE_MOCK"
                    walletType="software"
          />
</Tooltip>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "arrowPointAtCenter": false,
          "autoAdjustOverflow": true,
          "children": <style__Icon
            src="IMAGE_MOCK"
            walletType="software"
/>,
          "mouseEnterDelay": 0.1,
          "mouseLeaveDelay": 0.1,
          "placement": "right",
          "prefixCls": "ant-tooltip",
          "title": "Locked",
          "transitionName": "zoom-big-fast",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "src": "IMAGE_MOCK",
            "walletType": "software",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
